--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
+  margin: 50px 150px;
+}
+.header {
+  background-color:skyblue;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  border-radius: 6px;
+  margin-bottom: 30px;
+}
+.select-box {
+  align-items: center;
+  margin-left: 12px;
+  height: 25px;
+  border-radius: 6px;
+}
+
+.weather {
+  display: grid
+
+}
+.weathers {
+  display: flex;
+  justify-content: space-between;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selected {
+  border: 1px solid lightgrey;
+  border-radius: 6px;
 }
